--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-router-dom": "^7.6.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
