--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -20,7 +21,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.6.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "react-devtools": "^6.1.2",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "vite": "^6.3.5"
