--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -16,6 +15,7 @@
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@react-oauth/google": "^0.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -40,7 +40,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "react-devtools": "^6.1.2",
     "tailwindcss": "^4.1.6",
     "tw-animate-css": "^1.2.9",
     "vite": "^6.3.5"
